--- a/Profile Folder/chrome/partials/chrome/_menupopup.scss
+++ b/Profile Folder/chrome/partials/chrome/_menupopup.scss
@@ -331,3 +331,13 @@ panel {
         transition: none !important;
     }
 }
+
+.panel-footer {
+    color-scheme: unset !important;
+
+    button {
+        appearance: auto !important;
+        color: black !important;
+        font-weight: normal !important;
+    }
+}
