--- a/Profile Folder/chrome/partials/chrome/_toolbars.scss
+++ b/Profile Folder/chrome/partials/chrome/_toolbars.scss
@@ -326,7 +326,8 @@ findbar {
 .findbar-label {
     margin-bottom: 3px !important;
 
-    &.found-matches {
+    &.found-matches,
+    &.findbar-find-status {
         margin-inline: 0 !important;
         margin-left: 7px !important;
         font-weight: bold !important;
